version/0.12/_sources/api/solver/_autosummary/settings/viscous.rst.txt
:orphan:

.. _viscous:

viscous
=======

.. currentmodule:: ansys.fluent.core.solver.settings_231.viscous

.. autoclass:: viscous
    :show-inheritance:
    :undoc-members:
.. rubric:: Children

================================================================   ==========================================================================

Child                                                                                                                                 Summary

================================================================   ==========================================================================
:ref:`model <model>`                                                                                                           'model' child.

:ref:`options <options_1>`                                                                                                   'options' child.

:ref:`spalart_allmaras_production <spalart_allmaras_production>`        Enable/disable strain/vorticity production in Spalart-Allmaras model.

:ref:`k_epsilon_model <k_epsilon_model>`                                                                             'k_epsilon_model' child.

:ref:`k_omega_model <k_omega_model>`                                                                                   'k_omega_model' child.

:ref:`k_omega_options <k_omega_options>`                                                                             'k_omega_options' child.

:ref:`rng_options <rng_options>`                                                                                         'rng_options' child.

:ref:`near_wall_treatment <near_wall_treatment>`                                                                 'near_wall_treatment' child.

:ref:`reynolds_stress_model <reynolds_stress_model>`                                                           'reynolds_stress_model' child.

:ref:`subgrid_scale_model <subgrid_scale_model>`                                                                 'subgrid_scale_model' child.

:ref:`les_model_options <les_model_options>`                                                                       'les_model_options' child.

:ref:`reynolds_stress_options <reynolds_stress_options>`                                                     'reynolds_stress_options' child.

:ref:`rans_model <rans_model>`                                                                                            'rans_model' child.

:ref:`des_options <des_options>`                                                                                         'des_options' child.

:ref:`transition_module <transition_module>`                           Enable/disable a transition model to account for transitional effects.

:ref:`user_defined_transition <user_defined_transition>`                                            Set user-defined transition correlations.

:ref:`multiphase_turbulence <multiphase_turbulence>`                                                           'multiphase_turbulence' child.

:ref:`turbulence_expert <turbulence_expert>`                                                                       'turbulence_expert' child.

:ref:`geko_options <geko_options>`                                                                                      'geko_options' child.

:ref:`transition_model_options <transition_model_options>`                                                  'transition_model_options' child.

:ref:`transition_sst_option <transition_sst_option>`                                                           'transition_sst_option' child.

:ref:`user_defined <user_defined>`                                                                                      'user_defined' child.

:ref:`sa_enhanced_wall_treatment <sa_enhanced_wall_treatment>`                                            'sa_enhanced_wall_treatment' child.

:ref:`sa_damping <sa_damping>`                                                                                            'sa_damping' child.

================================================================   ==========================================================================

.. rubric:: Included in:

========================   ===================

Parent                                 Summary

========================   ===================
:ref:`models <models_1>`       'models' child.

========================   ===================

